[project]
name = "ubel"
version = "0.4.0"
description = "Supply-chain dependency firewall for: Python, Node, PHP, Ubuntu, Debian, Red Hat, and Almalinux."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "python-dotenv",
    "cvss",
    "reportlab",
    "distro",
    "packaging"
]

[project.scripts]
ubel-pip = "ubel.__main__:pip_mode"
ubel-npm = "ubel.__main__:npm_mode"
ubel-docker = "ubel.__main__:docker_mode"
ubel = "ubel.__main__:linux_mode"
