[project]
name = "ubel-python"
version = "0.6.0"
description = "Supply-chain dependency firewall for: Python, Node.js, Ubuntu, Debian, Red Hat, Almalinux, Rocky Linux, Alpine, and Docker."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
license = "Apache-2.0"
authors = [
    {name = "Ala Bouali"}
]

[project.scripts]
ubel-pip = "ubel.__main__:pip_mode"
ubel = "ubel.__main__:linux_mode"
