[project]
name = "ubel-python"
version = "0.1.0"
description = "Supply-chain dependency firewall for: Python, Node.js, Ubuntu, Debian, Red Hat, Almalinux, Rocky Linux, and Alpine."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
license = "AGPL-3.0-only"
authors = [
    {name = "Ala Bouali"}
]

[tool.setuptools]
packages = ["ubel"]

[project.scripts]
ubel-pip = "ubel.__main__:pip_mode"
ubel = "ubel.__main__:linux_mode"
